src/kubernetes/local-cluster/step-3/105-vs-frontend.yml
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress-pilot
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: frontend
    version: "1.0.0"

spec:

  hosts:

    - "pilot.localgft.com"

  gateways:

    - app-ingress-gateway

  http:

# ----------------------------------------------------------------------------

    - name: frontend-pilot

      headers:

        request:
          set:
            x-environment: pilot

        response:
          set:
            x-environment: pilot

      route:
        - destination:
            host: frontend
            port:
              number: 80

##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress-prod
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: frontend
    version: "1.0.0"

spec:

  hosts:

    - "prod.localgft.com"

  gateways:

    - app-ingress-gateway

  http:

# ----------------------------------------------------------------------------

    - name: frontend-prod

      headers:

        request:
          set:
            x-environment: prod

        response:
          set:
            x-environment: prod

      route:
        - destination:
            host: frontend
            port:
              number: 80
