src/kubernetes/local-cluster/step-3/306-dr-random.yml
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: random-destination
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: random
    version: "1.0.0"

spec:

  host: random
  
  subsets:

  - name: prod
    labels:
      version: "1.0.0"

  - name: pilot
    labels:
      version: "1.0.0"
